# mini

./: README.md
pascal/: .gitignore  README  lis.py
pascal/0/: calc.py
pascal/1/: calc.py
pascal/2/: calc.py
pascal/3/: calc.py
pascal/4/: calc.py
pascal/5/: interpretty.py
pascal/6/: interpretty.py  pas.txt
py-starter/: .coverage  noxfile.py  pyproject.toml  readme.md
py-starter/.github/workflows/: ci.txt
py-starter/src/: regex.py  regex_test.py
radar/: .gitignore  README.md
