[tool.poetry]
name = "pystarter"
version = "0.1.0"
description = "a modern python starter kit"
authors = ["selimslab <hselimozturk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
pytest = "^5.4.3"
black = "^19.10b0"
pylint = "^2.5.3"
pytest-cov = "^2.10.0"
coverage = "^5.1"
flake8 = "^3.8.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

